# cvm

./: CMakeLists.txt  README.rst
inc/: BinaryReader.h  Build.h  ConcurrentQueue.h  Const.h  Function.h  IdGen.h  Instr.h  Process.h  Program.h  Spinlock.h  Type.h  Value.h
src/: BinaryReader.cpp  Const.cpp  Function.cpp  IdGen.cpp  Instr.cpp  Main.cpp  Process.cpp  Program.cpp  Spinlock.cpp  TestGc.cpp  TestMessageLarge.cpp  TestMessageVm.cpp  TestPingPongVm.cpp  TestSpawnNative.cpp  TestSpawnVm.cpp  TestSwitching.cpp  Type.cpp  Value.cpp
test/: MessagePassing.scala  TestGc.java
